--- a/templates/home.html
+++ b/templates/home.html
@@ -3,7 +3,12 @@
 <div class="min-vh-100 row h-100 m-0" id="homepageContainer">
   <div class="py-4 row mx-auto my-auto col-md-7" id="formContainer">
     <div class="col-md-10 my-auto mx-auto">
+      <div class="{{ hide_on_login }}">
+        
       <form action="/tells" method="POST">
+        <div class="form-group">
+        <span class="h3">Sign In</span>
+      </div>
         <div class="form-group">
           <label for="username">Username</label>
           <input
@@ -45,6 +50,11 @@
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
     </div>
+    <div class="{{ display_on_login }} text-center py-3 h3">
+      <span class="fas fa-check-circle text-success"></span> Successfully Signed In!
+    </div>
+    </div>
   </div>
 </div>
+HOMEPAGE
 {% endblock %}
